// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<ul
  class="List"
  data-test-id="cf-ui-list"
>
  <li
    class="ListItem"
    data-test-id="cf-ui-list-item"
  >
    Item
  </li>
</ul>
`;

exports[`renders the component with an additional class name 1`] = `
<ul
  class="List my-extra-class"
  data-test-id="cf-ui-list"
>
  <li
    class="ListItem"
    data-test-id="cf-ui-list-item"
  >
    Item
  </li>
</ul>
`;
